name: proxy
version: 0.1
cabal-version: 1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
maintainer: asaba90@gmail.com
synopsis: A simple and fast HTTP/1.1 proxy
category: Network
author: Amir Sabbaghi
data-dir: ""

executable proxy
    build-depends: base >=4.6 && <4.7, bytestring >=0.10 && <0.11,
                   case-insensitive >=1.2.0.4 && <1.3, network >=2.6 && <2.7,
                   parsec >=3.1 && <3.2, utf8-string >=1 && <1.1,
                   threads >=0.5.1.3 && <0.6, base64-string >=0.2 && <0.3
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    other-extensions: ScopedTypeVariables OverloadedStrings
    hs-source-dirs: src

